--- a/css/templatemo-barber-shop.css
+++ b/css/templatemo-barber-shop.css
@@ -858,7 +858,7 @@ strong {
 }
 
 .form-box {
- 
+  background: linear-gradient(90deg, rgb(0, 0, 0) 35%, rgb(25, 148, 150) 100%);
   padding: 30px;
   border-radius: 15px;
   box-shadow: 0 0 15px rgb(250, 250, 249);
